networking/t-shoot/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-virtualservice
spec:
  hosts:
  - "httpd-master.eastus2.cloudapp.azure.com"
  gateways:
  - httpd-gateway # Use the correct Gateway name if different
  http:
  - route:
    - destination:
        host: httpd
        subset: v1 # Ensure 'v1' matches the subset label in DestinationRule
      weight: 50
    - destination:
        host: httpd
        subset: v2 # Ensure 'v2' matches the subset label in DestinationRule
      weight: 50
